# scrooge

./: .gitignore  Cargo.toml  README.md  best_practices.md  fusion.md  gen_flowchart.py  overview.md  todo.md
.claude-plugin/: marketplace.json
.scrooge/: checks.toml  helpers.json  overview.md
docs/: plugin-architecture.md
plugin/: .mcp.json  build.sh  stage.sh
plugin/.claude-plugin/: plugin.json
plugin/agents/: cratchit.md
plugin/commands/: cleanup.md  cratchit.md  humbugs.md  scrooge.md
plugin/hooks/: hooks.json  prompt_submit.py  session_start.py  stop.py
plugin/skills/task/: SKILL.md
src/: accounting.rs  agents.rs  checks.rs  cleanup.rs  codemap.rs  complexity.rs  hashline.rs  helpers.rs  main.rs  mcp.rs  openrouter.rs  overview.rs  practices.rs  sandbox.rs  tools.rs  util.rs
src/agents/: reply.rs  repo.rs  tests.rs
